# rex

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-all.bat  build-msvc.bat  build.bat
.github/workflows/: deploy_wasm.yml  pack.yml  utests.yml
code/: constants.h  geometry.h  main.cpp  rex.cpp  rex.h
data/: cube.stl
data/girl/: LICENSE.txt  scene.gltf
rex/: build.bat
rex-core/: CMakeLists.txt  CmakeLists.txt  build.bat
rex-core/include/rex-core/: api.h  assert.h  console.h  defer.h  defines.h  file.h  list.h  log.h  map.h  memory.h  path.h  res.h  str.h  time.h  types.h  vec.h  version.h.in  window.h
rex-core/src/: assert.cpp  log.cpp  memory.cpp  str.cpp
rex-core/src/linux/: api.cpp  console.cpp  file.cpp  path.cpp  time.cpp  window.cpp
rex-core/src/wasm/: api.cpp  console.cpp  file.cpp  index.html  path.cpp  time.cpp  window.cpp
rex-core/src/winos/: api.cpp  console.cpp  file.cpp  path.cpp  time.cpp  window.cpp
rex-math/: CMakeLists.txt
rex-math/include/rex-math/: defines.h  mat2.h  mat3.h  mat4.h  math.h  types.h  vec2.h  vec3.h  vec4.h
rex-raster/: CMakeLists.txt
rex-raster/include/rex-raster/: camera.h  canvas.h  constants.h  geometry.h  gltf.h  mesh.h  rex.h
rex-raster/src/: mesh.cpp  rex.cpp  stb_image.cpp
rex-scratch/: CMakeLists.txt  build.bat
rex-scratch/src/: main.cpp
rex-utests/: CMakeLists.txt  build.bat
rex-utests/src/: main.cpp  utests_core_list.cpp  utests_core_map.cpp  utests_core_memory.cpp  utests_core_str.cpp  utests_core_types.cpp  utests_core_vec.cpp  utests_math.cpp  utests_math_mat2.cpp  utests_math_mat3.cpp  utests_math_mat4.cpp  utests_math_types.cpp  utests_math_vec2.cpp  utests_math_vec3.cpp  utests_math_vec4.cpp
rex-viewer/: CMakeLists.txt
rex-viewer/src/: main.cpp
rex/src/: defines.h  gltf.h  rex.cpp
scripts/: utils.bat
viewer/: build.bat
viewer/src/: main.cpp
