add_executable(rex-scratch src/main.cpp)

target_link_libraries(rex-scratch PRIVATE rex-core)

target_compile_options(rex-utests PRIVATE
	$<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:AppleClang>>: -Werror -Weverything>
	$<$<CXX_COMPILER_ID:GNU>: -Wall -Wextra>
	$<$<CXX_COMPILER_ID:MSVC>: /WX>
)
